Dark mode fixes etc

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ pre {
 input,
 textarea,
 select {
-  @apply bg-white dark:bg-zinc-900 border dark:border-zinc-600 rounded p-1 px-2;
+  @apply border dark:border-zinc-600 rounded p-1 px-2;
 }
 
 .formkit-outer {
